--- a/src/App.scss
+++ b/src/App.scss
@@ -1,31 +1,9 @@
+@import "components/Header/Header";
+@import "components/Navbar/Navbar";
+@import "components/Profile/Profile";
+
 img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-
-.app-wrapper {
-  header {
-    padding: 10px;
-    .logo img {
-      max-width: 100px;
-    }
-  }
-  nav {
-    padding: 30px;
-    background: lawngreen;
-    flex-basis: 25%;
-    max-width: 25%;
-    a {
-      display: block;
-      color: #fff;
-      font-size: 24px;
-      text-decoration: none;
-    }
-  }
-  .main-content {
-    flex-basis: 73%;
-    max-width: 73%;
-    padding: 20px;
-  }
 }
