--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,10 @@ img {
   flex-basis: 73%;
   max-width: 73%;
   padding: 20px;
+  @media (max-width: 768px) {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
   > div {
     max-height: calc(100vh - 120px);
     overflow-y: scroll;
