--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,15 @@ img {
   }
 }
 
+
+.app-wrapper {
+  transition: all .4s ease-in-out;
+}
+.dark {
+  background: #363537;
+  color: #FAFAFA;
+}
+
 html {
   scroll-behavior: smooth;
 }
