--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -16,12 +16,17 @@
         font-size: 24px;
         text-decoration: none;
         transition: all .4s ease-in-out;
+        display: block;
+        border-bottom: 1px solid transparent;
+        border-radius: 5px;
+        padding: 0 5px;
         &:hover {
           text-decoration: none;
           opacity: .7;
+          color: $color;
         }
         &.active {
-          color: $color;
+          border-color: $color;
         }
       }
     }
@@ -31,7 +36,6 @@
     color: #fff;
     li {
       list-style: none;
-
       .user-avatar {
         max-width: 30px;
         max-height: 30px;
