--- a/src/components/Profile/MyPosts/Post/Post.scss
+++ b/src/components/Profile/MyPosts/Post/Post.scss
@@ -7,7 +7,12 @@
       border-radius: 50%;
     }
   }
-  .post-text {
+}
 
+.dark {
+  .single-post {
+    background: transparent;
+    border: 1px solid;
+    border-radius: 5px;
   }
 }
