--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -34,7 +34,7 @@
   .friendsList {
     width: 100%;
     color: #fff;
-    li {
+    .friend {
       list-style: none;
       .user-avatar {
         max-width: 30px;
