--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,22 @@ img {
   }
 }
 
+.app-wrapper {
+  transition: .4s ease-in-out;
+  &.dark {
+    background: $dark_color;
+    h1, h2, h3, h4, h5, h6, p, div {
+      color: #fff;
+    }
+    .card {
+      background-color: transparent;
+    }
+    a {
+      color: $color;
+    }
+  }
+}
+
 li {
   list-style: none;
 }
