--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -17,16 +17,40 @@
         text-decoration: none;
         transition: all .4s ease-in-out;
         display: block;
-        border-bottom: 1px solid transparent;
-        border-radius: 5px;
         padding: 0 5px;
+        position: relative;
+        overflow: hidden;
+        background: linear-gradient(to right, $color, $color 50%, #fff 50%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-size: 200% 100%;
+        background-position: 100%;
+        transition: background-position 600ms ease;
+        text-decoration: none;
+        &:before {
+          content: '';
+          position: absolute;
+          background: linear-gradient(to right, $color, $color 30%, transparent 80%);
+          bottom: 0;
+          left: 0;
+          width: 0%;
+          height: 2px;
+          transition: 600ms ease;
+        }
         &:hover {
+          background-position: 0 100%;
           text-decoration: none;
           opacity: .7;
-          color: $color;
+          &:before {
+            width: 100%;
+          }
         }
         &.active {
-          border-color: $color;
+          background-position: 0 100%;
+          &:before {
+            width: 100%;
+          }
         }
       }
     }
