--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,9 @@ img {
   transition: .4s ease-in-out;
   &.dark {
     background: $dark_color;
+    a {
+      color: $dark_main-color;
+    }
     h1, h2, h3, h4, h5, h6, p, div {
       color: #fff;
     }
@@ -40,6 +43,7 @@ img {
     }
   }
 }
+
 
 li {
   list-style: none;
@@ -62,4 +66,11 @@ html {
 ::-webkit-scrollbar-thumb {
   background: $color;
   border-radius: 2px;
+}
+
+.dark {
+  ::-webkit-scrollbar-thumb {
+    background: $dark_main-color;
+    border-radius: 2px;
+  }
 }
