redux-form for Messages page

--- a/src/components/Dialogs/Dialogs.scss
+++ b/src/components/Dialogs/Dialogs.scss
@@ -1,3 +1,15 @@
 a {
   text-decoration: none;
 }
+
+.messages {
+  .new-message-input {
+    #addNewMsg {
+      color: #000;
+      height: 100px;
+    }
+    .newMsgLabel {
+      color: #000;
+    }
+  }
+}
