--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -1,4 +1,8 @@
-.label {
-  color: #000;
-  font-weight: 700;
+
+.formWrapper {
+  height: calc(100% - 70px);
+  .label {
+    color: #000;
+    font-weight: 700;
+  }
 }
