--- a/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -1,15 +1,20 @@
 .profile__block {
   .profile-top-bg {
-    max-height: 200px;
+    min-height: 250px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
   .profile-info {
     .adm-avatar {
-      margin-top: -50px;
+      background: #fff;
+      position: relative;
+      max-width: 200px;
+      max-height: 200px;
+      border-radius: 50%;
+      margin: -100px auto 0;
       img {
-        max-width: 200px;
-        max-height: 200px;
         border-radius: 50%;
-        border: 5px solid #fff;
       }
     }
   }
