--- a/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -13,8 +13,18 @@
       max-height: 200px;
       border-radius: 50%;
       margin: -100px auto 0;
+      position: relative;
       img {
         border-radius: 50%;
+      }
+      .upload-photo {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        input {
+          width: 100%;
+          height: 100%;
+        }
       }
     }
   }
