--- a/src/components/Profile/ProfileInfo/ProfileInfo.scss
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.scss
@@ -19,13 +19,27 @@
       }
       .upload-photo {
         position: absolute;
-        width: 20px;
-        height: 20px;
+        bottom: 0;
+        right: 15px;
+        label {
+          background: #fff;
+          border-radius: 50%;
+          width: 30px;
+          height: 30px;
+          cursor: pointer;
+          svg {
+            path {
+              fill: #333;
+            };
+          }
+        }
         input {
           width: 100%;
           height: 100%;
+          display: none;
         }
       }
     }
   }
 }
+
