--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -6,6 +6,11 @@
     font-weight: 700;
   }
 
+  .captchaImg {
+    margin: 10px 0;
+    max-width: 150px;
+  }
+
   .dangerMsg {
     border-bottom: 1px solid red;
   }
